--- a/Parcial2POO.Datos/Parcial2POO.Datos.csproj
+++ b/Parcial2POO.Datos/Parcial2POO.Datos.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serializador.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
